# Orbit

./: .gitignore  AGENTS.md  CLAUDE.md  Info.plist  LICENSE  Orbit.entitlements  Package.swift  README.en.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  ROADMAP.md  build.sh  design-qa.md
.claude/: launch.json
.github/: RELEASE_NOTES.md
app/: README.md  pubspec.yaml
apple/: Info.plist
desktop/: capsule.html  package.json  pnpm-lock.yaml  vite.config.ts
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.store.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: defaults.rs  lib.rs  secrets.rs
desktop/src-tauri/src/agent/: context.rs  events.rs  failure.rs  loop_.rs  mod.rs  prompt.rs
desktop/src-tauri/src/automation/: mod.rs  model.rs  store.rs  validate.rs
desktop/src-tauri/src/commands/: agents.rs  assets.rs  automations.rs  capsule.rs  chat.rs  connection.rs  conversations.rs  create.rs  devices.rs  dictation.rs  gateway_auth.rs  hotkey.rs  mcp.rs  mod.rs  models.rs  permissions.rs  projects.rs  providers.rs  settings.rs  skills.rs  text_insert.rs  titles.rs  workspace.rs
desktop/src-tauri/src/mcp/: config.rs  mod.rs
desktop/src-tauri/src/permission/: mod.rs
desktop/src-tauri/src/skills/: mod.rs
desktop/src-tauri/src/tools/: bash.rs  device.rs  fetch.rs  fs_tools.rs  mod.rs  search.rs  skill.rs
docs/: AUTOMATION_DESIGN.md  README.zh-CN.md  RELEASE_SIGNING.md  ROADMAP.en.md  ROADMAP.md
src/: App.tsx  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+250 files in other folders)
